[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Stage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Spawner.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Blocks/BaseTetrisBlock.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 175.895, 11.579, 0, 0, 0, 0, 668.471, 11.579 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Grid" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="Grid" index="0"]
position = Vector2( 416, 419.833 )

[node name="TetrisBlock1" parent="Grid" index="1"]
position = Vector2( 416, 256 )
type = 1

[node name="Spawner" type="Node2D" parent="Grid"]
editor/display_folded = true
script = ExtResource( 3 )
type = -1
Block1 = ExtResource( 4 )

[node name="Spawner" type="Path2D" parent="Grid/Spawner"]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Grid/Spawner/Spawner"]
position = Vector2( 175.895, 11.579 )

[node name="GUI" parent="." instance=ExtResource( 5 )]
[connection signal="game_over" from="GUI" to="." method="game_over"]
[connection signal="start_game" from="GUI" to="." method="new_game"]

[editable path="Grid"]

[editable path="Grid/Player"]

[editable path="GUI"]
